Fixing header image overlap

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -14,7 +14,7 @@ header .header-content {
 }
 .header-content img {
     width: 100%;
-    z-index: 999;
+    z-index: 90;
     position:relative;
     margin-top: 155px;
 }
